lldpd (1.0.9)
  * Fix:
    + Do not use interface alias if we set it ourselves.

lldpd (1.0.8)
  * Fix:
    + Out-of-bound read access when parsing LLDP-MED civic address in
      liblldpctl for malformed fields.
    + Fix memory leak when receiving LLDPU with duplicate fields.
      CVE-2020-27827.
  * Changes:
    + Enable "router" capability bit when IPv6 routing is enabled.

lldpd (1.0.7)
  * Fix:
    + Do not listen only to LLDP packets on Linux. When an interface
      is enslaved to an Open vSwitch, incoming packets are missed.

lldpd (1.0.6)
  * Fix:
    + Do not loose chassis local information when interface status changes.
    + Fix SNMP walk on lldpRemTable when missing remote system
      name or description.
    + Remove length limitation on system description and platform.
  * Changes:
    + Deprecate use of lldpctl_watch_callback(). Use
      lldpctl_watch_callback2() instead.
    + Upgrade embedded libevent to 2.1.11-stable
    + Add support of sending LLDP frames on a configured VLAN

lldpd (1.0.5)
  * Changes:
    + Interface names are also matched for management addresses.
    + On Linux, only register protocol handler for LLDP when only LLDP
      is enabled.
    + Stricter on LLDP incoming frames validation.
    + Add support for VLAN-aware bridges for Linux (no range support).
    + Add support for 802.3BT (no SNMP support).
    + Add support for millisecond-grained tx-interval (Jean-Pierre Tosoni).
    + Use generic names for VLAN names, instead of interface names (eg
      vlan100 instead of eth1.100).
  * Fix:
    + Don't clear chassis TLV on shutdown LLDPDU.
    + Don't require/display powerpairs for Dot3 power when device type
      is PD.

lldpd (1.0.4)
  * Changes:
    + Add "configure system max-neighbors XX" command to modify maximum
      of neighbors accepted per port.
    + Implement lldpRemOrgDefInfoTable table for custom TLVs.
  * Fix:
    + Better compliance for statsTLVsUnrecognizedTotal and
      statsAgeoutsTotal counters.